<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一号公交</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_route_plan">路线</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_bus_line">公交线路</string>
    <string name="title_activity_nearby">附近站点</string>
    <string name="title_activity_station_bus_line">途经线路</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_shop">在线商城</string>
    <string name="title_activity_offline_map">离线地图</string>
    <string name="title_activity_bus_card">一卡通</string>
    <string name="title_activity_card_log">消费记录</string>
    <string name="title_activity_more_bus">更多车辆</string>
    <string name="title_activity_newsInformation">公告详情</string>
    <string name="title_activity_notice">消息公告</string>
    <string name="title_activity_pay_result">支付結果</string>
    <string name="title_activity_transit_route_result">详情</string>
    <string name="title_activity_collect">收藏列表</string>
    <string name="downloadManager">下载管理</string>
    <string name="citylist">城市列表</string>
    <string name="delete">删除</string>
    <string name="update">更新</string>
    <string name="title_activity_switch_city">切换城市</string>
    <string name="notFoundResult">抱歉，没有找到结果</string>
    <string name="downloadfailed">下载失败</string>
    <string name="cannotlocate">暂时无法定位</string>
    <string name="networkdisabled">网络未连接</string>
    <string name="prompt">提示</string>
    <string name="confirmDelete">确定要删除吗？</string>
    <string name="confirmNotWiFiAndDownLoad">不是WiFi网络，确定要下载吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="booking">预约</string>
    <string name="userCard_resumeLog">消费记录</string>

    <!-- HKQ -->
    <string name="userHome">个人中心</string>
    <string name="userName">用户名</string>
    <string name="userPhone">18392120258</string>
    <string name="login_register">登录/注册</string>
    <string name="userPhoto">头像</string>
    <string name="userPhoneName">手机号</string>
    <string name="userSex">性别</string>
    <string name="userPassword">修改密码</string>
    <string name="logout">退出登陆</string>
    <string name="oldPassword">旧密码:</string>
    <string name="newPassword1">新密码:</string>
    <string name="newPassword2">重复密码:</string>
    <string name="modifyPassword">修改密码</string>
    <string name="ok">提交</string>
    <string name="newUserName">新用户名:</string>
    <string name="newUserPhone">新绑定手机号:</string>
    <string name="securityCode">获取验证码</string>
    <string name="inputsecurityCode">输入验证码:</string>
    <string name="feedBack">意见反馈</string>
    <string name="thanks">感谢您使用“一号公交”客户端</string>
    <string name="feedback_text0">请写下您的宝贵意见或建议</string>
    <string name="feedback_text1">您的联系方式</string>
    <string name="feedback_text2">请留下您的手机号码、QQ号或邮箱</string>
    <string name="feedback_text3">我们的联系方式</string>
    <string name="feedback_text4">“一号公交”客服  18392120258</string>
    <string name="userCard">一卡通</string>
    <string name="scoreTitle">用户积分</string>
    <string name="scoreExchangeTitle">积分兑换</string>
    <string name="userScore">积分</string>
    <string name="scoreExchange">积分兑换</string>
    <string name="exchangeRules">兑换规则</string>
    <string name="userCardMoney">余额</string>
    <string name="cardMoney">----</string>
    <string name="cardID">一卡通ID</string>
    <string name="cardRecords">消费记录</string>
    <string name="recharge">充值</string>
    <string name="complaints">投诉</string>
    <string name="complaints_text0">请写下您的投诉内容</string>
    <string name="complaints_text3">投诉电话</string>
    <string name="complaints_text4">“一号公交”投诉电话  18392120258</string>
    <string name="loginTitle">登录</string>
    <string name="register">注册</string>
    <string name="submit">确定</string>
    <string name="forgetpassword">找回密码</string>
    <string name="login_userPhone">手机号:</string>
    <string name="login_userPassword">密码:</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="register_userName">用户名:</string>
    <string name="register_userPassword">重复:</string>
    <string name="yanzheng">验证码:</string>
    <string name="getCode">获取验证码</string>
    <string name="registerTipsfixed">点击注册表示用户已同意</string>
    <string name="registerTips">用户服务协议</string>
    <string name="copy_right">CopyRight © 2015 MavelCo.All Rights Reserved</string>

    <!-- QRCode -->
    <string name="menu_scan">Scan QR Code</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_failed">扫描失败</string>
    <string name="pay_immediately">立即支付</string>
    <string name="pay_AccountFailure">对方账户失效，无法支付</string>

    <!-- NFC -->
    <string name="nfc_scan_tips">请将一卡通紧贴手机背面的NFC感应区，请确认手机具备NFC功能且已经开启</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_nfc">Setting</string>
    <string name="btn_exit">Exit</string>
    <string name="tip_nfc_notfound">no nfc hardware!</string>
    <string name="tip_nfc_disabled">nfc disabled</string>
    <string name="tip_nfc_enabled">nfc enabled</string>
    <string name="msg_reading">Reading Card...</string>
    <string name="msg_nonfc">No NFC hardware found, Program will NOT work.</string>
    <string name="msg_nfcdisabled">NFC hardware has been disabled, Please enable it first. (using the \'Setting\' to turn it on or off)</string>
    <string name="msg_nocard">No Card been read, Please take the card near to the back cover of phone and try again</string>
    <string name="msg_copied">Card information has been copied to clipboard</string>
    <string name="lab_id">ID:</string>
    <string name="lab_pmm">PMm:</string>
    <string name="lab_serl">SEL:</string>
    <string name="lab_ver">VER:</string>
    <string name="lab_date">DAT:</string>
    <string name="lab_op">USE:</string>
    <string name="lab_log">Log:</string>
    <string name="lab_balance">Balance:</string>
    <string name="lab_cur_cny">CNY</string>
    <string name="lab_cur_hkd">HKD</string>
    <string name="lab_op_time">Time(s)</string>
    <string name="lab_user_id">Card SN:</string>
    <string name="lab_bktg_sn">Book ID:</string>
    <string name="lab_bkcat">Category:</string>
    <string name="name_bkcat_soc">Natural sciences</string>
    <string name="name_bkcat_sci">Social sciences</string>
    <string name="name_bkcat_ltr">Literature</string>
    <string name="name_octopuscard">Octopus Card (Hong Kong)</string>
    <string name="name_szt">Shenzhen Tong</string>
    <string name="name_szt_f">Shenzhen Tong (Old version)</string>
    <string name="name_lnt">Yangcheng Tong</string>
    <string name="name_wht">Wuhan City Smart Card</string>
    <string name="name_cac">Changan Card</string>
    <string name="name_bj">Beijing Municipal Card</string>
    <string name="name_bj_m">Beijing Municipal Card (Old version)</string>
    <string name="name_unknowntag">Unknown Tag</string>
    <string name="name_szlib_center">Shenzhen Library (Center)</string>
    <string name="name_szlib_nanshan">Shenzhen Library (Nanshan)</string>
    <string name="name_lib_readercard">Reader\'s Card</string>
    <string name="name_lib_booktag">Book\'s eTag</string>
    <string name="info_help">
<![CDATA[
	<div>Make sure that the NFC sensor is enaled before read card. You can click \'setting\' button to open system configure dialog to confirm.</div>
	<div>When reading card, please take your card close to NFC sensor of phone (normally, it is at back cover of the phone) and hold a few seconds so that program can read data out.</div><p />
	<div>phone\'s NFC hardware and os performance is not as good as expect currently, so it may need repeatedly read for whese kind of cards. (In case of always fail, You can try to disable NFC sensor and then re-enable it.)</div><p />
	<div>So far we\'ve confirmed the following can be read: ShenzhenTong Card (newer version) of Shenzhen, Octopus Card of Hongkong, Reader Card of Shenzhen Library, Beijing Municipal Card (newer version), Changan Card of Shaanxi,Xi\'an, Wuhan City Smart Card. This is an open source application, welcome everyone participation in development,extends it to read more types of card, Also welcome provide test cards.</div>
	]]>
    </string>
    <string name="info_about">
<![CDATA[
	<div><img src="icon_main,16,16" /><big>&nbsp;NFCard&nbsp;</big><version>v</version></div><p />
	<div>NFCard can read contactless IC card use NFC sensor.</div>
	<div>Supporte a range of iso7816-3 / iso15693 / felicia compliant e-wallet / RFID cards, and can be extended to support many specific data protocol, e.g. pboc2.0 of china.</div>
	<div>NFCard can read information like balance of account, transaction log, etc. from these cards </div><p />
	<div>This is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version. see <a href="http://www.gnu.org/licenses/">www.gnu.org/licenses</a>.</div><p />
	<div>Newest version and source code can be found at <a href="http://code.google.com/p/nfcard/">code.google.com/p/nfcard</a></div><p /><p />
	<div>By <a href="mailto:sinpowei@gmail.com">sinpo</a>, 2011.</div>
	]]>
    </string>
    <string name="rulesScore">
<![CDATA[
	<h3>积分兑换规则</h3><br/>
	<h4>1.每日登录获得积分</h4><br/>
	<h4>2.使用扫码支付车费获取积分</h4><br/>
	<h4>3.使用此软件查询线路获取积分</h4><br/>
	<h4>4.查看公交实时信息获取积分</h4><br/>
	<h4>5.在商城购物获取积分</h4><br/>
	<h4>6.提出意见反馈并被采纳获取积分</h4><br/>
	<h4>7.提交投诉并情况属实获取积分</h4>

	]]>
    </string>
    <string name="title_activity_collect_transit_route_result">CollectTransitRouteResultActivity</string>

</resources>