<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 顶栏搜索框 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_color_white"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageButton
            android:id="@+id/compaints_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:src="@drawable/actionbar_back_selector" />

        <RelativeLayout
            android:id="@+id/modifyPassword_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/modifyOtherTitle_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="6dp"
                android:text="@string/complaints"
                android:textColor="#000000"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >

            <Button
                android:id="@+id/compaints_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_modify_btn"
                android:padding="6dp"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#C0CCCCCC" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:orientation="vertical"
            android:padding="5.0dip" >

            <TextView
                style="@style/text_black_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/thanks" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@drawable/divider_title" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:focusable="true" />

            <EditText
                android:id="@+id/txt_compaints_suggestion"
                style="@style/default_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:gravity="top"
                android:hint="@string/complaints_text0"
                android:lines="6"
                android:padding="5.0dip"
                android:textSize="15.0sp" />

            <TextView
                style="@style/text_black_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/feedback_text1" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@drawable/divider_title" />

            <EditText
                android:id="@+id/txt_compaints_contact_info"
                style="@style/default_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:hint="@string/feedback_text2"
                android:singleLine="true"
                android:textSize="15.0sp" />

            <TextView
                style="@style/text_black_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/complaints_text3" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@drawable/divider_title" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/compaints_service"
                    style="@style/settings_item"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:layout_gravity="left|center"
                    android:background="@drawable/background_style"
                    android:drawableLeft="@drawable/ic_settings_service"
                    android:drawablePadding="6.0dip"
                    android:gravity="center_vertical"
                    android:text="@string/complaints_text4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>